--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -20,6 +20,7 @@
   <servlet-mapping>
   	<servlet-name>servletOiMundo</servlet-name>
   	<url-pattern>/oi</url-pattern>
+  	<url-pattern>/ola</url-pattern>
   </servlet-mapping>
   
 </web-app>
